# lightning

./: 04-Rstats02 _split_restrict.R  04-Rstats02_half.R  04-Rstats02_half_restrict.pl  04-Rstats02_halfc.R  04-Rstats02_timeMIPS.R  04-Rstats_methods_test.R  04-Rstats_methods_test.pl  README.md
_old/: 04-Rstats02_half.R  04-Rstats02_half.pl  04-Rstats02_halfc.R  04-Rstats_get_time_series.R
analysis-pipe/: 00-ctr.pl  02-align.pl  02-max-avg.pl  03-chunk.pl  04-Rstats01.R  04-Rstats01.pl  04-Rstats02.R  04-Rstats02.pl  04-Rstats02_methods_test.R  04-Rstats03.R  04-Rstats03.pl  04-Rstats_methods_test.R  04-Splines.R  04-Splines.pl  04-Splines_p.R  04-concat.pl  05-Cluster.R  05-Cluster.pl  05-Rstats.R  05-timefft.pl  06-PostProc.R  06-PostProc.pl  07-Final.R  0X-Activity.R  0X-Activity.pl
scape2mnc/: scape2mnc
volcorrts/: CMakeLists.txt  COPYING  README  volcorrts.c
